Refactor saves to allow different save cards